# k8s-riak

./: .gitignore  .travis.yml  CONTRIBUTORS  Dockerfile  Makefile  README.md  cluster-up.sh  exec-bootstrap.sh  riak-kubernets-bootstrapper.cabal  stack.yaml
k8s/: LICENSE  README.md  riak-discovery-service.yaml  riak-rc.yaml  riak-service.yaml
k8s-riak-bootstrapper/: k8s-riak-bootstrapper.cabal
k8s-riak-bootstrapper/src/: Main.hs
riak-kubernetes-bootstrapper/: riak-kubernets-bootstrapper.cabal  stack.yaml
riak-test-client/: LICENSE  riak-test-client.cabal  stack.yaml
riak-test-client/src/: Main.hs
src/: Main.hs
