name:                riak-kubernets-bootstrapper
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/briends/riak-kubernets-bootstrapper#readme
license:             MIT
license-file:        LICENSE
author:              Jan-Philip Loos
maintainer:          jloos@maxdaten.io
copyright:           2015 Briends GmbH
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable riak-kubernets-bootstrapper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , connection
    , containers
    , envy
    , errors
    , http-client-tls
    , lens
    , lens-aeson
    , string-conversions
    , text
    , turtle
    , wreq
