name:                riak-test-client
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/MaxDaten/riak-test-client#readme
license:             BSD3
license-file:        LICENSE
author:              Jan-Philip Loos
maintainer:          jloos@maxdaten.io
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable riak-test-client
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, riak >= 0.9, bytestring >= 0.10
